<resources>
    <string name="amenity_type_seamark">Seamark</string>
    <string name="app_modes_choose_descr">Choose use profiles visible in application</string>
    <string name="app_modes_choose">Application Profiles</string>
    <string name="map_widget_appearance">Remaining elements:</string>
    <string name="map_widget_map_rendering">Map rendering:</string>
    <string name="app_mode_hiking">Hiking</string>
    <string name="app_mode_motorcycle">Motorcycle</string>
    <string name="app_mode_boat">Boat</string>
    <string name="app_mode_aircraft">Aircraft</string>
    <string name="tip_faq_t">Please visit https://code.google.com/p/osmand/wiki/FAQ to see frequently asked questions.</string>
    <string name="tip_faq">Frequently Asked Questions</string>
    <string name="local_osm_changes_delete_all_confirm">You are going to delete %1$d osm changes. Are you sure?</string>
    <string name="local_osm_changes_delete_all">Delete All</string>
    <string name="animate_routing_route_not_calculated">Please, calculate the route first</string>
    <string name="animate_routing_route">Simulate using calculated route </string>
    <string name="animate_routing_gpx">Simulate using GPX track</string>
    <string name="remember_choice">Remember my choice</string>
    <string name="gps_status_eclipsim">GPS status</string>
    <string name="default_and">and</string>
    <string name="default_or">or</string>
    <string name="route_is_too_long">The route is possibly too long to be calculated by the OsmAnd offline router. 
        	On average offline routing is possible between points up to 200km apart. Please add one or more intermediate waypoints to calculate the route.</string>
    <string name="auto_zoom_none">No auto zoom</string>
    <string name="auto_zoom_close">To close-up</string>
    <string name="auto_zoom_far">To mid-range</string>
    <string name="auto_zoom_farthest">To long-range</string>
    <string name="map_magnifier">Map magnifier</string>
    <string name="base_world_map">World basemap</string>
    <string name="tip_map_styles">Map Styles</string>
    <string name="tip_map_styles_t">OsmAnd supports displaying the offline vector maps in different map styles to suit your to needs:
		\n\nOther than the balanced \'default\' map style, you may in \'Menu\' → \'Configure screen\' → \'Map Style\' select for example
		\n\t* The \'Touring view\' style, which contains the most detailed information feasable for traveling and touring, including optimization for professional drivers (higher contrast, distinguishable roads), options for Alpine hiking (SAC scale), cycle routes, hiking symbol support, etc.
		\n\t* \'High contrast roads\' shows roads in very accentuated colors for bright ambient lighting situations
		\n\t* \'Winter and ski\' creates a (snow covered) winter landscape view, and shows global ski slopes and lifts (in connection with the \'World ski\' map download)</string>
    <string name="about_version">Version :</string>
    <string name="about_settings">About</string>
    <string name="about_settings_descr">Version info, licenses, project members</string>
    <string name="tips_settings">Tips</string>
    <string name="tips_settings_descr">Some tips about the app</string>
    <string name="tips_and_tricks">Tips</string>
    <string name="tip_recent_changes_1_6_t">Changes in 1.6:
	\n\t* Support of Full HD devices
	\n\t* Support transparent map background
	\n\t* Show downloaded maps and facilitate downloading missing maps directly from the map view
	\n\t* Contour line map files now bundled for countries/regions
	\n\t* New world basemap with major roads, railroads, and major areal features like forests 
	\n\t* Map magnifier feature (long click on zoom button) - Useful both for tile and vector maps  
	\n\t* Define/edit custom online tile sources (and specify expiration time)
	\n\t* Support of time conditional speed limits (Netherlands)
	\n\t* Faster search address input
	\n\t* Bug fixes with routing and rendering</string>
    <string name="local_index_tile_data_zooms">Zooms downloaded: %1$s</string>
    <string name="local_index_tile_data_expire">Expire (minutes): %1$s</string>
    <string name="local_index_tile_data_downloadable">Downloadable: %1$s</string>
    <string name="local_index_tile_data_maxzoom">Maximum zoom: %1$s</string>
    <string name="local_index_tile_data_minzoom">Minimum zoom: %1$s</string>
    <string name="local_index_tile_data_name">Tile data: %1$s</string>
    <string name="edit_tilesource_successfully">Tilesource %1$s is successfully saved</string>
    <string name="edit_tilesource_elliptic_tile">Elliptic mercator</string>
    <string name="edit_tilesource_maxzoom">Max zoom</string>
    <string name="edit_tilesource_expiration_time">Expire (minutes)</string>
    <string name="edit_tilesource_minzoom">Min zoom</string>
    <string name="edit_tilesource_url_to_load">URL</string>
    <string name="edit_tilesource_choose_existing">Choose existing...</string>
    <string name="edit_tilesource_name">Name</string>
    <string name="maps_define_edit">Define/Edit&#8230;</string>
    <string name="map_widget_fps_info">FPS debug info</string>
    <string name="driving_region_descr">Select Driving Region : US, Europe, UK, Asia and Others</string>
    <string name="driving_region">Driving Region</string>
    <string name="driving_region_japan">Japan</string>
    <string name="driving_region_us">United States</string>
    <string name="driving_region_canada">Canada</string>
    <string name="driving_region_europe_asia">Europe &amp; Asia</string>
    <string name="driving_region_uk">UK, India, Australia &amp; Others</string>
    <string name="osmodroid_mode_on">Stop OsMoDroid</string>
    <string name="osmodroid_mode_off">Start OsMoDroid</string>
    <string name="osmodroid_refresh">Refresh channels</string>
    <string name="osmodroid_seek">Seek object</string>
    <string name="osmodroid_unseek">Unseek object</string>
    <string name="announce_gpx_waypoints">Announce GPX waypoints</string>
    <string name="speak_title">Announce&#8230;</string>
    <string name="speak_descr">Configure to announce street names, traffic warnings (forced stops, speed bumps), speed camera warnings, speed limits</string>
    <string name="speak_street_names">Announce street names (TTS)</string>
    <string name="speak_speed_limit">Announce speed limit</string>
    <string name="speak_cameras">Announce speed cameras</string>
    <string name="speak_traffic_warnings">Announce traffic warnings</string>
    <string name="tip_recent_changes_1_5_t">Changes in 1.5:
	\n\t* Voice warnings about speed limits and cameras
	\n\t* More voice prompt capabilities (street names announced)
	\n\t* High density map icons
	\n\t* Lots of UI changes
	\n\t* Bugfixes in distance display, GPX analyzer, waypoint handling, planning widget, OSM uploading, https handling</string>
    <string name="osb_author_or_password_not_specified">Please specify OSM user and password in Settings</string>
    <string name="clear_intermediate_points">Clear intermediate points</string>
    <string name="keep_intermediate_points">Keep intermediate points</string>
    <string name="new_directions_point_dialog">You already have intermediate points set.</string>
    <string name="context_menu_item_directions_to">Directions To</string>
    <string name="context_menu_item_directions_from">Directions From</string>
    <string name="route_descr_map_location">Map: </string>
    <string name="route_descr_lat_lon">Latitude: %1$.3f \n Longitude: %2$.3f</string>
    <string name="route_descr_current_location">Current position</string>
    <string name="route_descr_destination"></string>
    <string name="route_to">To:</string>
    <string name="route_via">Via:</string>
    <string name="route_from">From:</string>
    <string name="local_index_gpx_timespan">\nTime span: %1$d:%2$02d:%3$02d</string>
    <string name="local_index_gpx_timemoving">\nTime moving: %1$d:%2$02d:%3$02d</string>
    <string name="app_mode_default">Browse map</string>
    <string name="settings_preset">Default profile</string>
    <string name="destination_point">Destination : %1$s</string>
    <string name="cancel_navigation">Stop</string>
    <string name="prefer_in_routing_title">Prefer&#8230;</string>
    <string name="prefer_in_routing_descr">Prefer motorways</string>
    <string name="precise_routing_mode_descr">Enable precise routing to calculate precise routes without glitches. It is very limited by distance and doesn\'t use native library.</string>
    <string name="precise_routing_mode">Precise routing (alpha)</string>
    <string name="non_optimal_route_calculation">Calculate possibly non-optimal route over long distances</string>
    <string name="show_warnings_title">Show alarms&#8230;</string>
    <string name="show_warnings_descr">Configure traffic warnings (speed limits, forced stops, speed bumps), speed camera warnings, and lane information</string>
    <string name="use_compass_navigation_descr">Use the compass when no heading is detected otherwise</string>
    <string name="use_compass_navigation">Use compass</string>
    <string name="auto_zoom_map_descr">Auto zoom map according to your speed (while map is synchronized with current position)</string>
    <string name="auto_zoom_map">Auto zoom map</string>
    <string name="snap_to_road_descr">Snap position to roads during navigation</string>
    <string name="snap_to_road">Snap to road</string>
    <string name="avoid_in_routing_title">Avoid&#8230;</string>
    <string name="avoid_in_routing_descr">Avoid toll roads, unpaved, ferries</string>
    <string name="index_settings_descr">Download maps and manage offline data stored on your device</string>
    <string name="show_details">Show details</string>
    <string name="routing_settings">Navigation</string>
    <string name="routing_settings_descr">Specify options for the navigation</string>
    <string name="index_settings">Data management</string>
    <string name="general_settings">General</string>
    <string name="general_settings_descr">Configure display and common settings for the application</string>
    <string name="choose_auto_follow_route">Auto-center map view</string>
    <string name="choose_auto_follow_route_descr">Time until map view synchronizes with current position</string>
    <string name="poi_filter_closest_poi">Nearby</string>
    <string name="fast_route_mode">Fastest route</string>
    <string name="fast_route_mode_descr">Enable to calculate fastest route or disable for shortest route </string>
    <string name="point_on_map">\tLocation:\n \tLatitude: %1$.5f\n \tLongitude: %2$.5f</string>
    <string name="show_route">Details</string>
    <string name="voice_provider_descr">Select voice guidance for navigation (language codes see ISO 639-1)</string>
    <string name="voice_provider">Voice guidance</string>
    <string name="favorite">Favorite</string>
    <string name="router_service_descr">Choose an online or offline navigation service</string>
    <string name="router_service">Navigation service</string>
    <string name="address">Address</string>
    <string name="only_show">Preview</string>
    <string name="get_directions">Route</string>
    <string name="go">Go</string>
    <string name="choose_building">Choose building</string>
    <string name="choose_street">Choose street</string>
    <string name="choose_city">Choose city</string>
    <string name="ChooseCountry">Choose country</string>
    <string name="search_address_region">Region</string>
    <string name="search_address_city">City</string>
    <string name="search_address_street">Street</string>
    <string name="search_address_building">Building</string>
    <string name="search_address_building_option">Building</string>
    <string name="search_address_street_option">Intersecting street</string>
    <string name="default_buttons_reset">Reset</string>
</resources>