<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <ListPreference
        android:key="router_service"
        android:summary="@string/router_service_descr"
        android:title="@string/router_service" >
    </ListPreference>

    <CheckBoxPreference
        android:key="fast_route_mode"
        android:summary="@string/fast_route_mode_descr"
        android:title="@string/fast_route_mode" >
    </CheckBoxPreference>

    <ListPreference
        android:key="voice_provider"
        android:summary="@string/voice_provider_descr"
        android:title="@string/voice_provider" >
    </ListPreference>
    <ListPreference
        android:key="auto_follow_route"
        android:summary="@string/choose_auto_follow_route_descr"
        android:title="@string/choose_auto_follow_route" >
    </ListPreference>
    <ListPreference
        android:key="auto_zoom_map_new"
        android:summary="@string/auto_zoom_map_descr"
        android:title="@string/auto_zoom_map" >
    </ListPreference>

    <CheckBoxPreference
        android:key="snap_to_road"
        android:summary="@string/snap_to_road_descr"
        android:title="@string/snap_to_road" >
    </CheckBoxPreference>

    <Preference
        android:key="show_routing_alarms"
        android:summary="@string/show_warnings_descr"
        android:title="@string/show_warnings_title" />
    <Preference
        android:key="speak_routing_alarms"
        android:summary="@string/speak_descr"
        android:title="@string/speak_title" />
    <Preference
        android:key="avoid_in_routing"
        android:summary="@string/avoid_in_routing_descr"
        android:title="@string/avoid_in_routing_title" />
    <Preference
        android:key="prefer_in_routing"
        android:summary="@string/prefer_in_routing_descr"
        android:title="@string/prefer_in_routing_title" />

    <CheckBoxPreference
        android:key="use_compass_navigation"
        android:summary="@string/use_compass_navigation_descr"
        android:title="@string/use_compass_navigation" >
    </CheckBoxPreference>
    <CheckBoxPreference
        android:key="precise_routing_mode"
        android:summary="@string/precise_routing_mode_descr"
        android:title="@string/precise_routing_mode" >
    </CheckBoxPreference>

</PreferenceScreen>