<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <Preference
        android:key="local_indexes"
        android:summary="@string/index_settings_descr"
        android:title="@string/index_settings" >
    </Preference>
    <Preference
        android:key="general_settings"
        android:summary="@string/general_settings_descr"
        android:title="@string/general_settings" />
    <Preference
        android:key="routing_settings"
        android:summary="@string/routing_settings_descr"
        android:title="@string/routing_settings" />
    <!--
    <Preference
        android:key="plugins"
        android:summary="@string/prefs_plugins_descr"
        android:title="@string/prefs_plugins" />
    -->


    <!-- <Preference android:title="@string/support_new_features" android:summary="@string/support_new_features_descr" android:key="bidforfix"/> -->

</PreferenceScreen>