<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ab_bottom_solid_mapandgoactionbar"
    android:gravity="center_horizontal" >

    <TextView
        android:id="@+id/textViewAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageButtonClose"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/imageButtonClose"
        android:layout_toLeftOf="@+id/imageButtonClose"
        android:ellipsize="marquee"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:paddingRight="2dp"
        android:text="@string/get_directions"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFFFF" />

    <ImageButton
        android:id="@+id/imageButtonClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/mapngo_btn_dialog_holo_light"
        android:minHeight="8dp"
        android:src="@drawable/ic_action_gremove_dark" />

    <View
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/imageButtonClose"
        android:background="#ffffff" />



    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator1"
        android:gravity="center"
        android:orientation="horizontal" >
    </LinearLayout>
    
    <View
        android:id="@+id/separator3"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/LinearLayout"
        android:background="#ffffff" />

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator3" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_dialog_text"
            android:orientation="vertical" >
            
                <TextView
        android:id="@+id/ValidateTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
      
        android:background="@drawable/box_dialog_text"
        android:gravity="center"
        android:text=""
        android:textColor="@color/color_invalid"
        android:textSize="16sp"
        android:visibility="gone" >
    </TextView>

            <TextView
                android:id="@+id/ViaView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:gravity="left"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:text="@string/destination_point"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFFFF"
                android:textSize="18sp" >

            </TextView>

            <Spinner
                android:id="@+id/FromSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="18sp"
                android:visibility="gone" >
            </Spinner>

            <Spinner
                android:id="@+id/ToSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="18sp"
                android:visibility="gone" >
            </Spinner>

  

            <TextView
                android:id="@+id/routeDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="4dp"
                android:text="@string/show_details"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FFFFFFFF"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/OptimalCheckox"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/non_optimal_route_calculation" />
        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/separator2"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@id/ScrollView"
        android:background="#ffffff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ScrollView"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonRouteList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/mapngo_btn_dialog_holo_light"
            android:drawableTop="@drawable/ic_action_note_dark"
            android:text="@string/show_route"
            android:textColor="#FFFFFFFF"
            android:textSize="15sp"
            android:visibility="gone"
             />
        
                <Button
            android:id="@+id/buttonStopRoute"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/mapngo_btn_dialog_holo_light"
            android:drawableTop="@drawable/ic_action_remove_dark"
            android:ellipsize="middle"
            android:text="@string/cancel_navigation"
            android:textColor="#FFFFFFFF"
            android:textSize="15sp"
             android:visibility="gone" />

        <Button
            android:id="@+id/buttonGo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/mapngo_btn_dialog_holo_light"
            android:drawableTop="@drawable/ic_action_gdirections_dark"
            android:ellipsize="middle"
            android:text="@string/go"
            android:textColor="#FFFFFFFF"
            android:textSize="15sp" />

        <Button
            android:id="@+id/buttonRoutePreview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/mapngo_btn_dialog_holo_light"
            android:drawableTop="@drawable/ic_action_polygom_dark"
            android:ellipsize="marquee"
            android:minWidth="100dp"
            android:text="@string/only_show"
            android:textColor="#FFFFFFFF"
            android:textSize="15sp" />
    </LinearLayout>

</RelativeLayout>